--- a/NHB Submission/latex/paper.tex
+++ b/NHB Submission/latex/paper.tex
@@ -72,9 +72,14 @@ behavioral outcomes and also confirm and extend prior results found with
 attitudinal measures. We also show how the messenger bias
 can be reduced. In our experiments, we use real human participant to
 both receive messages and to deliver messages, a point of contrast from
-prior work using confederates or a fictional character in a vignette \citep{kuhlen2013language}. In two large pre-registered experiments (Study 1 and Study 2), we compared
+prior work using confederates or a fictional character in a vignette \citep{kuhlen2013language}. 
+In two large pre-registered experiments (Study 1 and Study 2), we compared
 people's decisions toward a messenger who delivered good rather than bad
-news against decisions toward another partner who was not the messenger. In
+news against decisions toward another partner who was not the messenger.
+\footnote{The pre-registration for Study 1 can be found at \url{https://aspredicted.org/PD3_KC2}, 
+and the pre-registration for Study 2 can be found at 
+\url{https://aspredicted.org/8TG_4KY}.} 
+ In
 the second study, we also manipulate the messenger's payoffs depending
 on the news they delivered and fully informed participants of the
 messenger's incentives. The messenger earned (lost) money when the
